added public folder -> css stylesheets: layout && login

--- a/orion/views/login/login.ejs
+++ b/orion/views/login/login.ejs
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Orion | Login</title>
-  </head>
-  <body>
-    <h1>Welcome to project Orion</h1>
-<%=title%> is sweet
-<div class="">
-  email
-</div>
-<form class="" action="/login" method="post">
-<button type="submit">Sign in</button>
-</form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Orion | Login</title>
+</head>
+
+<body>
+  <h1>Welcome to project Orion</h1>
+  <div class="container-fluid">
+    <form class="" action="/login" method="post">
+      <p> Email: <input type="text" name="email" value="" placeholder="email"></p>
+      <p>Password: <input type="password" name="password" value="" placeholder="password"></p>
+      <button type="submit">Sign in</button>
+    </form>
+  </div>
+
+</body>
+
 </html>
