--- a/orion/views/login/login.ejs
+++ b/orion/views/login/login.ejs
@@ -9,11 +9,14 @@
 <body>
   <h1>Welcome to project Orion</h1>
   <div class="container-fluid">
-    <form class="" action="/login" method="post">
-      <p> Email: <input type="text" name="email" value="" placeholder="email"></p>
-      <p>Password: <input type="password" name="password" value="" placeholder="password"></p>
-      <button type="submit">Sign in</button>
-    </form>
+    <div class="form">
+      <form class="" action="/login" method="post">
+        <p> Email: <input type="text" name="email" value="" placeholder="email"></p>
+        <p>Password: <input type="password" name="password" value="" placeholder="password"></p>
+        <button type="submit">Sign in</button>
+      </form>
+    </div>
+
   </div>
 
 </body>
