routes and basic auth integrated

--- a/orion/views/index.ejs
+++ b/orion/views/index.ejs
@@ -1,2 +1,7 @@
 
-  <h1><%= title %> is working!</h1>
+  <h1>Its working!</h1>
+
+
+  <form class="" action="/login/signout" method="post">
+  <button type="submit">Sign out</button>
+  </form>
