--- a/orion/views/index.ejs
+++ b/orion/views/index.ejs
@@ -1,2 +1,35 @@
+<!DOCTYPE html>
+<html>
 
-  <h1><%= title %> is working!</h1>
+<head>
+  <meta charset="utf-8">
+  <title>Orion | Login</title>
+  <link rel="stylesheet" href="/login.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <%- include('components/header') %>
+    <div id="login-div" class="row">
+      <div id="filter">
+      <div id="inner-login">
+        <h3>Welcome to Orion</h3>
+        <div id="login-form" class="form col-sm-6">
+          <form class="" action="/login" method="post">
+            <p> Email: <input type="text" name="email" value="" placeholder="email"></p>
+            <p>Password: <input type="password" name="password" value="" placeholder="password"></p>
+            <button type="submit">Sign in</button>
+          </form>
+        </div>
+        <div id="github-login" class="col-sm-6">
+          <p>Or sign in with github</p>
+        </div>
+      </div>
+      </div>
+    </div>
+    <%- include('components/footer') %>
+</body>
+</div>
+
+</html>
