--- a/orion/public/login.css
+++ b/orion/public/login.css
@@ -1,40 +1,36 @@
 #login-div{
-  float: left;
   width: 50%;
   margin-left: 25%;
   margin-top: 10%;
   text-align: center;
   font-size: 2em;
-  height: auto;
+  height: 50%;
   background-color: white;
   border-radius: 5px;
 }
 
 #login-div input{
-  width: 14em;
-  height: 2.5em;
-  padding-top: -5px;
+  width: 10em;
+  height: 1.5em;
 }
 
 #login-div button{
   width: 70px;
   font-size: .5em;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 #login-form{
-  float: left;
   width:50%;
 }
 
-/*#filter{
-  float: left;
-  background-color: rgba(200, 200, 200, 0.5);
-}*/
-
 #github-login{
-  float: right;
   width: 50%;
+  border-left: 1px solid grey;
+}
+
+#git-img{
+  width: 80px;
 }
 
 #header {
@@ -42,6 +38,24 @@
   width: 100vw;
   height: 3em;
   box-shadow: 2px 2px 2px black;
+}
+
+#header img{
+  width: 150px;
+}
+
+.row{
+  margin: 0px;
+}
+
+#side-nav{
+  background-color: rgb(51, 51, 51);
+  height:100%;
+  border-top: 2px solid rgb(45, 45, 45);
+}
+
+#links{
+  display: table-column;
 }
 
 #footer{
@@ -54,6 +68,7 @@
   bottom: 0px;
   margin:0px;
 }
+
 .container-fluid{
   width: 100vw;
   height: 100vh;
