--- a/orion/views/components/header-search.ejs
+++ b/orion/views/components/header-search.ejs
@@ -1,4 +1,6 @@
-<div id="header-search" class="row">
+<div id="header" class="row">
   <img src="/assets/img.png" alt="">
-  <input type="text" name="" value=""><button type="button" name="button"></button>
+  <div id="search">
+    <input type="text" name="" value=""><button type="button" name="button">Search</button>
+  </div>
 </div>
