--- a/orion/public/login.css
+++ b/orion/public/login.css
@@ -81,6 +81,6 @@
 body{
   font-family: 'Roboto', sans-serif;
   margin: 0px;
-  background-image: url('assets/login-background.jpg');
+  background-image: url('assets/login_background.jpg');
   background-size: cover;
 }
