--- a/orion/views/login.ejs
+++ b/orion/views/login.ejs
@@ -19,7 +19,6 @@
 <body>
   <div class="container-fluid">
     <%- include('components/header') %>
-      <%- include('components/nav') %>
         <div id="login-div" class="row">
           <div id="filter">
             <div id="inner-login">
@@ -34,7 +33,7 @@
               </div>
               <div id="github-login" class="col-sm-6">
                 <p>Or sign in with github</p>
-                <a href="#"><img id="git-img" src="assets/github-mark.png"></a>
+                <a href="#"><img id="git-img" src="assets/github-logo.png"></a>
               </div>
             </div>
           </div>
