--- a/orion/public/layout.css
+++ b/orion/public/layout.css
@@ -1,38 +1,34 @@
-#login-div{
-float: left;
-  width: 50%;
-  margin-left: 25%;
-  margin-top: 10%;
-  text-align: center;
-  font-size: 2em;
-  height: auto;
-}
-
-#login-div input{
-  width: 14em;
-  height: 2.5em;
-  padding-top: -5px;
-}
-
-#login-div button{
-  width: 70px;
-  font-size: .5em;
-}
-
-#login-form{
-  float: left;
-  width:50%;
-}
-
-#github-login{
-  float: right;
-  width: 50%;
-}
 
 #header {
   background-color: rgb(51, 51, 51);
   width: 100vw;
   height: 3em;
+  box-shadow: 2px 2px 2px black;
+}
+
+#header img{
+  width: 40px;
+  z-index: 0;
+}
+
+#header form{
+  display: inline;
+}
+
+.row{
+  margin: 0px;
+}
+
+#side-nav{
+  top: 0%;
+  background-color: rgb(51, 51, 51);
+  height:88.65vh;
+  border-top: 2px solid rgb(45, 45, 45);
+}
+
+#links{
+  margin-top: 5%;
+  width: 5%;
 }
 
 #footer{
@@ -40,20 +36,40 @@ float: left;
   background-color: rgb(51, 51, 51);
   width: 100vw;
   height: 3em;
-  border-top: 2px solid #D0CFCD;
   text-align: center;
-  position: absolute;
   bottom: 0px;
+  margin:0px;
 }
+
+#foot2{
+  bottom:0px;
+  height:42px;
+}
+
 .container-fluid{
   width: 100vw;
   height: 100vh;
   margin: 0px;
   padding: 0px;
-  overflow-y: scroll;
+  background-color: rgba(200, 200, 200, 0.5);
+}
+#search-bar{
+  width:35%;
+  margin-left: 30%;
+  margin-top: 8px;
+  height: auto;
 }
 
 body{
+  height: 100vh;
+  width: 100vw;
   font-family: 'Roboto', sans-serif;
   margin: 0px;
+  background-size: cover;
+}
+
+#bleh{
+  margin-top: .5%;
+  height: 87vh;
+  overflow-y: scroll;
 }
