--- a/orion/views/components/header-search.ejs
+++ b/orion/views/components/header-search.ejs
@@ -1,6 +1,10 @@
 <div id="header" class="row">
-  <img src="/assets/img.png" alt="">
-  <div id="search">
-    <input type="text" name="" value=""><button type="button" name="button">Search</button>
+  <div class="col-sm-1">
+    <img src="/assets/orion.png" alt="">
+  </div>
+  <div id="search" class="col-sm-10">
+      <form action="/student" method="get">
+        <input class="" id="search-bar" type="text" name="student_name" value=""><button type="submit" name="button">Search</button>
+      </form>
   </div>
 </div>
