--- a/orion/views/staff-layout.ejs
+++ b/orion/views/staff-layout.ejs
@@ -14,5 +14,17 @@
     <link rel="stylesheet" href="/layout.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
-  
+<body>
+
+<%- include('components/header') %>
+<%- include('components/nav') %>
+
+<%- include('components/greeting') %>
+<%- include('components/staff-home') %>
+
+
+
+
+<%- include('components/footer') %>
+</body>
 </html>
