--- a/orion/views/student-layout.ejs
+++ b/orion/views/student-layout.ejs
@@ -16,7 +16,7 @@
   </head>
 <body>
 
-<%- include('components/header') %>
+<%- include('components/header-search') %>
 <%- include('components/nav') %>
 
 
