corrected staff-layout.ejs and work in progress for login cookies

--- a/orion/views/staff-layout.ejs
+++ b/orion/views/staff-layout.ejs
@@ -20,7 +20,7 @@
 <%- include('components/nav') %>
 
 <%- include('components/greeting') %>
-<div class="bleh">
+<div id="bleh">
 <%- include('components/staff-home') %>
 </div>
 
