--- a/orion/public/layout.css
+++ b/orion/public/layout.css
@@ -8,7 +8,6 @@
 
 #header img{
   width: 40px;
-  z-index: 0;
 }
 
 #header form{
@@ -22,7 +21,7 @@
 #side-nav{
   top: 0%;
   background-color: rgb(51, 51, 51);
-  height:88.65vh;
+  height:94.5vh;
   border-top: 2px solid rgb(45, 45, 45);
 }
 
@@ -39,12 +38,9 @@
   text-align: center;
   bottom: 0px;
   margin:0px;
+  position: absolute;
 }
 
-#foot2{
-  bottom:0px;
-  height:42px;
-}
 
 .container-fluid{
   width: 100vw;
@@ -70,6 +66,6 @@ body{
 
 #bleh{
   margin-top: .5%;
-  height: 87vh;
+  height: 88vh;
   overflow-y: scroll;
 }
