Added contact list for a student and ability to display selected contact from list

--- a/orion/views/student-layout.ejs
+++ b/orion/views/student-layout.ejs
@@ -19,7 +19,9 @@
 <%- include('components/header-search') %>
 <%- include('components/nav') %>
 
-
+<div class="bleh">
+  <%- include('components/contacts') %>
+</div>
 
 <%- include('components/footer') %>
 </body>
