Added greeting to student main page and update contacts detail view

--- a/orion/views/student-layout.ejs
+++ b/orion/views/student-layout.ejs
@@ -19,6 +19,7 @@
 <%- include('components/header-search') %>
 <%- include('components/nav') %>
 
+<%- include('components/greeting-student') %>
 <div class="bleh">
   <%- include('components/contacts') %>
 </div>
