--- a/orion/views/components/contacts.ejs
+++ b/orion/views/components/contacts.ejs
@@ -8,10 +8,9 @@
         <th>Position</th>
       </tr>
       <% for (let contact of contacts) { %>
-        <% let {first_name, last_name, company_name, position, student_id, id} = contact %>
-        <% let full_name = first_name + ' ' + last_name %>
+        <% let {contact_name, company_name, position, student_id, id} = contact %>
         <tr>
-          <td></div><a href="/contacts?student_id=<%= student_id %>&contact_id=<%= id %>"><%= full_name %></a></td>
+          <td><a href="/contacts?student_id=<%= student_id %>&contact_id=<%= id %>"><%= contact_name %></a></td>
           <td><%= company_name %></td>
           <td><%= position %></td>
         </tr>
@@ -41,6 +40,18 @@
       <div class="row">
         <div class="col-md-4">Date Meeting</div>
         <div class="col-md-8"><%= date_meeting %></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Meeting</div>
+        <div class="col-md-8"><%= meeting %></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Synopsis</div>
+        <div class="col-md-8"><%= synopsis %></div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">Follow-up</div>
+        <div class="col-md-8"><%= follow_up %></div>
       </div>
     <% } %>
   </div>
