Rendering pages inside of template

--- a/orion/views/staff-layout.ejs
+++ b/orion/views/staff-layout.ejs
@@ -16,10 +16,10 @@
 <body>
 
   <%- include('components/header-search') %>
-    <%- include('components/nav') %>
+    <%- include('components/staff-nav') %>
       <%- include('components/greeting') %>
-        <div id="bleh">
-          <%- include('components/staff-home') %>
+        <div id="inner-content">
+            <%- include('components/staff-home') %>
         </div>
         <%- include('components/footer') %>
 </body>
