--- a/orion/views/components/greeting-student.ejs
+++ b/orion/views/components/greeting-student.ejs
@@ -1,2 +1,6 @@
-<% var {student_name} = contacts[0]%>
+<% if (contacts) { %>
+  <% var {student_name} = contacts[0]%>
+<% } else if (jobs) { %>
+  <% var {student_name} = jobs[0]%>
+<% } %>
 <h2>Hello, <%=student_name%> </h2>
