--- a/orion/views/components/header-search.ejs
+++ b/orion/views/components/header-search.ejs
@@ -4,7 +4,8 @@
   </div>
   <div id="search" class="col-sm-10">
       <form action="/student" method="get">
-        <input class="" id="search-bar" type="text" name="student_name" value=""><button type="submit" name="button">Search</button>
+        <input class="" id="search-bar" type="text" name="student_name" value="">
+        <button type="submit" name="button">Search</button>
       </form>
   </div>
 </div>
