Nav-bar now styled and works

--- a/orion/views/staff-layout.ejs
+++ b/orion/views/staff-layout.ejs
@@ -19,9 +19,11 @@
     <%- include('components/staff-nav') %>
       <%- include('components/greeting') %>
         <div id="inner-content">
-            <%- include('components/staff-home') %>
+
+            <%- include('ejs-render-pages/student-profile') %>
         </div>
         <%- include('components/footer') %>
+        <script src="/nav-hide.js" charset="utf-8"></script>
 </body>
 
 </html>
