--- a/orion/public/layout.css
+++ b/orion/public/layout.css
@@ -21,13 +21,14 @@
 #side-nav{
   top: 0%;
   background-color: rgb(51, 51, 51);
-  height:94.5vh;
+  height:100vh;
   border-top: 2px solid rgb(45, 45, 45);
 }
 
 #links{
   margin-top: 5%;
   width: 5%;
+  position: fixed;
 }
 
 #footer{
@@ -38,7 +39,7 @@
   text-align: center;
   bottom: 0px;
   margin:0px;
-  position: absolute;
+  position: static;
 }
 
 
@@ -68,4 +69,47 @@ body{
   margin-top: .5%;
   height: 88vh;
   overflow-y: scroll;
+}
+
+#student-picture{
+  width: 200px;
+  height: 200px;
+  border-radius: 1000px;
+}
+
+#student-pic-background{
+  margin-left: 5%;
+  width: auto;
+  background-color: black;
+  padding: 1px;
+}
+
+div.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+div.tab button {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+div.tab button:hover {
+    background-color: #ddd;
+}
+
+div.tab button.active {
+    background-color: #ccc;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
