--- a/orion/views/components/staff-home.ejs
+++ b/orion/views/components/staff-home.ejs
@@ -1,4 +1,4 @@
-<div class="row">
+<div id="profile" class="tabcontent">
   <div class="col-md-11">
     <table class="table table-striped table-hover ">
   <thead>
@@ -20,4 +20,4 @@
   </tbody>
   </table>
   </div>
-</div>
+  </div>
