Changed student nav

--- a/orion/views/components/student-nav.ejs
+++ b/orion/views/components/student-nav.ejs
@@ -1,9 +1,6 @@
 <div id="side-nav" class="sidenav col-md-1">
-  <div id="links">
-    <form action="/home" method="get">
-      <button type="submit" name="button"></button>
-    </form>
-    <a href="/profile">Profile</a>
-    <a href="/#">Contact</a>
+  <div id="links" class="tab">
+    <button class="tablinks" onclick="openDiv(event, 'profile')" name="button">Profile</button>
+    <button class="tablinks" onclick="openDiv(event, 'contact')" name="button">Contact</button>
   </div>
 </div>
