--- a/orion/views/student-layout.ejs
+++ b/orion/views/student-layout.ejs
@@ -12,7 +12,7 @@
 <body>
 
 <%- include('components/header-search') %>
-<%- include('components/nav') %>
+<%- include('components/student-nav') %>
 
 <%- include('components/greeting-student') %>
 <div class="bleh">
