--- a/orion/views/components/student-profile.ejs
+++ b/orion/views/components/student-profile.ejs
@@ -11,30 +11,36 @@
     </div>
     <div class="col-md-3">
       <table class="table table-striped table-hover ">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% for (var i = 0; i< todos.length; i++){%>
-        <% var {name, description, status} = todos[i]%>
-      <tr>
-        <td><%= name %></td>
-        <td><%= description %></td>
-        <td><%= status %></td>
-      </tr>
-    <%}%>
-    </tbody>
-    </table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (var i = 0; i< todos.length; i++){%>
+            <% var {name, description, status} = todos[i]%>
+              <tr>
+                <td>
+                  <%= name %>
+                </td>
+                <td>
+                  <%= description %>
+                </td>
+                <td>
+                  <%= status %>
+                </td>
+              </tr>
+              <%}%>
+        </tbody>
+      </table>
     </div>
-    </div>
-    <div id="home" class="tabcontent">
-      <%- include('../components/staff-home')%>
+  </div>
+  <div id="home" class="tabcontent">
+    <%- include('../components/staff-home')%>
   </div>
   <div id="contact" class="tabcontent">
     bleh
   </div>
-  </div>
+</div>
