Fixing profile pages

--- a/orion/views/components/student-profile.ejs
+++ b/orion/views/components/student-profile.ejs
@@ -19,8 +19,8 @@
       </tr>
     </thead>
     <tbody>
-      <% for (var i = 0; i< todos.length; i++){%>
-        <% var {name, description, status} = todos[i]%>
+      <% for (var i = 0; i< staffHome.length; i++){%>
+        <% var {name, description, status} = staffHome[i]%>
       <tr>
         <td><%= name %></td>
         <td><%= description %></td>
