FIxed student layout

--- a/orion/views/student-layout.ejs
+++ b/orion/views/student-layout.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
@@ -11,7 +13,7 @@
   </head>
 <body>
 
-<%- include('components/header-search') %>
+<%- include('components/header') %>
 <%- include('components/student-nav') %>
 
 <%- include('components/greeting-student') %>
@@ -26,5 +28,7 @@
     <%- include('components/jobs') %>
   <% } %>
 </div>
+
+<%- include('components/footer') %>
 
 </html>
