Updated profile images in seeds

--- a/orion/views/components/student-nav.ejs
+++ b/orion/views/components/student-nav.ejs
@@ -2,5 +2,6 @@
   <div id="links" class="tab">
     <button class="tablinks" onclick="openDiv(event, 'profile')" name="button">Profile</button>
     <button class="tablinks" onclick="openDiv(event, 'contact')" name="button">Contact</button>
+    <button class="tablinks" onclick="openDiv(event, 'job')" name="button">Jobs</button>
   </div>
 </div>
