--- a/orion/views/components/student-profile.ejs
+++ b/orion/views/components/student-profile.ejs
@@ -1,15 +1,14 @@
 <div class="col-md-11">
   <div class="row">
-    <h3>David Kruz</h3>
+    <h3><%= students[0].student_name %></h3>
+    <h4><%= students[0].email %></h4>
   </div>
-  <div id="profile" class="row tabcontent">
+  <div id="profile" class="row">
     <div id="student-pic-background" class="col-md-2">
-      <img id="student-picture" src="http://i.imgur.com/GV2dqxog.jpg" alt="">
+      <img id="student-picture" src="<%= students[0].photo_url %>" alt="">
     </div>
+    <div class="col-md-3"></div>
     <div class="col-md-7">
-
-    </div>
-    <div class="col-md-3">
       <table class="table table-striped table-hover ">
         <thead>
           <tr>
@@ -19,23 +18,17 @@
           </tr>
         </thead>
         <tbody>
-          <% for (var i = 0; i< todos.length; i++){%>
-            <% var {name, description, status} = todos[i]%>
+          <% for (var i = 0; i< students.length; i++){%>
+            <% var {name, description, status} = students[i]%>
               <tr>
-                <td>
-                  <%= name %>
-                </td>
-                <td>
-                  <%= description %>
-                </td>
-                <td>
-                  <%= status %>
-                </td>
+                <td><%= name %></td>
+                <td><%= description %></td>
+                <td><%= status %></td>
               </tr>
               <%}%>
         </tbody>
       </table>
     </div>
   </div>
-  
+
 </div>
