--- a/orion/views/components/greeting.ejs
+++ b/orion/views/components/greeting.ejs
@@ -1,2 +1,3 @@
-<% var {staff_first, staff_last} = staffHome[0]%>
-<h2>Hello, <%=staff_first%> <%=staff_last%></h2>
+<% var {first_name, last_name} = staff[0]%>
+<% console.log('this is from the ejs', first_name, last_name)%>
+<h2>Hello, <%=first_name%> <%=last_name%></h2>
