--- a/orion/views/components/staff-nav.ejs
+++ b/orion/views/components/staff-nav.ejs
@@ -3,5 +3,6 @@
     <button class="tablinks" onclick="openDiv(event, 'profile')" name="button">Profile</button>
     <button class="tablinks" onclick="openDiv(event, 'contact')" name="button">Contact</button>
     <button class="tablinks" onclick="openDiv(event, 'home')" name="button">Home</button>
+    <button class="tablinks" onclick="openDiv(event, 'todos')" name="button">Todos</button>
   </div>
 </div>
