--- a/orion/public/layout.css
+++ b/orion/public/layout.css
@@ -20,7 +20,7 @@
 #side-nav {
   top: 0%;
   background-color: rgb(51, 51, 51);
-  height:100vh;
+  height:98.6%;
   border-top: 2px solid rgb(45, 45, 45);
 }
 
