student list page for staff members

--- a/orion/views/components/staff-nav.ejs
+++ b/orion/views/components/staff-nav.ejs
@@ -1,7 +1,7 @@
 <div id="side-nav" class="sidenav col-md-1">
   <div id="links" class="tab">
+    <button class="tablinks" onclick="openDiv(event, 'students')" name="button">Students</button>
     <button class="tablinks" onclick="openDiv(event, 'profile')" name="button">Profile</button>
-    <button class="tablinks" onclick="openDiv(event, 'contact')" name="button">Contact</button>
     <button class="tablinks" onclick="openDiv(event, 'home')" name="button">Home</button>
     <button class="tablinks" onclick="openDiv(event, 'todos')" name="button">Todos</button>
   </div>
