--- a/orion/views/components/staff-injection.ejs
+++ b/orion/views/components/staff-injection.ejs
@@ -1,8 +1,8 @@
 <div id="profile" class="row tabcontent">
   <%-include('staff-profile')%>
 </div>
-<div id="contact" class="row tabcontent">
-  <%-include('contacts')%>
+<div id="students" class="row tabcontent">
+  <%-include('students-list')%>
 </div>
 <div id="home" class="row tabcontent">
   <%-include('staff-home')%>
