--- a/orion/views/components/header-search.ejs
+++ b/orion/views/components/header-search.ejs
@@ -3,7 +3,7 @@
     <img src="/assets/orion.png" alt="">
   </div>
   <div id="search" class="col-sm-10">
-      <form action="/search" method="get">
+      <form action="/search/1" method="get">
         <input class="" id="search-bar" type="text" name="student_name" value="">
         <button type="submit" name="button">Search</button>
       </form>
