Show home on page load

--- a/orion/views/components/student-injection.ejs
+++ b/orion/views/components/student-injection.ejs
@@ -1,4 +1,4 @@
-<div id="profile" class="tabcontent">
+<div id="home" class="tabcontent">
       <%- include('student-profile') %>
 </div>
 <div id="contact" class="tabcontent">
