--- a/orion/views/components/student-nav.ejs
+++ b/orion/views/components/student-nav.ejs
@@ -1,7 +1,7 @@
 <div id="side-nav" class="sidenav col-md-1">
   <div id="links" class="tab">
-    <button class="tablinks" onclick="openDiv(event, 'profile')" name="button">Profile</button>
-    <button class="tablinks" onclick="openDiv(event, 'contact')" name="button">Contact</button>
-    <button class="tablinks" onclick="openDiv(event, 'job')" name="button">Jobs</button>
+    <button id="home-button" class="tablinks" onclick="openDiv(event, 'home')" name="button">Profile</button>
+    <button id="contact-button" class="tablinks" onclick="openDiv(event, 'contact')" name="button">Contact</button>
+    <button id="jobs-button" class="tablinks" onclick="openDiv(event, 'job')" name="button">Jobs</button>
   </div>
 </div>
