--- a/orion/views/components/students-list.ejs
+++ b/orion/views/components/students-list.ejs
@@ -1,4 +1,4 @@
-<%var s = [];%>
+
 <% for (var i = 0; i < cohorts.length; i++){ %>
   <h2><%=cohorts[i].cohort_name%></h2>
   <table class="table table-striped table-hover ">
@@ -11,7 +11,6 @@
   <tbody>
   <% for(var j = 0; j < students.length; j++){ %>
     <% if (students[j].cohorts_id === cohorts[i].id){ %>
-      <% s.push(students[j])%>
       <tr>
         <td>
           <%= students[j].first_name +" "+ students[j].last_name %>
@@ -20,9 +19,7 @@
           <%= students[j].email %>
         </td>
         <td>
-        <form action="/staff/<%= students[j].id%>/profile" method="get">
-          <input type="submit" name="id" value="<%= students[j].id%>">
-          </form>
+          <button type="button" class="student-select" value="<%=students[j].id%>">Select</button>
         </td>
       </tr>
     <%}%>
@@ -31,3 +28,14 @@
   </tbody>
   </table>
 <%}%>
+<script type="text/javascript">
+var s;
+if (document.getElementsByClassName('student-select').onclick === true) {
+  alert('help')
+}
+  document.getElementsByClassName('student-select').onclick = function(){
+    console.log("pre-click",s)
+    s = document.getElementsByClassName('student-select').value;
+    console.log("post-click",s)
+  }
+</script>
