--- a/orion/views/student-layout.ejs
+++ b/orion/views/student-layout.ejs
@@ -23,5 +23,5 @@
 </div>
 
 <%- include('components/footer') %>
-<script src="/nav-hide.js" charset="utf-8"></script>
+<script src="/nav-hide.js" charset="utf-8" defer></script>
 </html>
