--- a/orion/views/components/staff-injection.ejs
+++ b/orion/views/components/staff-injection.ejs
@@ -1,24 +1,24 @@
 <% if (action === true) { %>
   <% console.log('in staff-injection ejs, students.length=', students.length); %>
   <% if (students.length <= 1) { %>
-    <div id="profile" class="row">
+     <div id="profile" class="row">
       <%-include('staff-profile')%>
-    </div>
+     </div>
     <div id="students" class="row tabcontent">
       <%-include('students-list')%>
     </div>
   <% } else { %>
-    <div id="profile" class="row tabcontent">
+     <div id="profile" class="row tabcontent">
       <%-include('staff-profile')%>
-    </div>
+     </div>
     <div id="students" class="row">
       <%-include('students-list')%>
     </div>
   <% } %>
 <% } else { %>
-  <div id="profile" class="row tabcontent">
+  <!-- <div id="profile" class="row tabcontent">
     <%-include('staff-profile')%>
-  </div>
+   </div> -->
   <div id="students" class="row tabcontent">
     <%-include('students-list')%>
   </div>
@@ -28,7 +28,7 @@
   <%-include('staff-home')%>
 </div>
 
-<div id="todos" class="row tabcontent">
+<div id="todos" class="row tabcontent" style="display:block">
   <% console.log('in staff-injection ejs, action=', action); %>
   <% if (action === 'edit' || action === 'add') { %>
     <%-include('todos')%>
