changed layout to accomodate routes

--- a/orion/views/components/header-search.ejs
+++ b/orion/views/components/header-search.ejs
@@ -8,4 +8,8 @@
         <button type="submit" name="button">Search</button>
       </form>
   </div>
+  <form action="/login/signout" method="post">
+    <button type="submit" name="button">Logout</button>
+  </form>
+
 </div>
