--- a/orion/views/components/student-search.ejs
+++ b/orion/views/components/student-search.ejs
@@ -1,7 +1,4 @@
 
-<%- include('components/header-search') %>
-  <%- include('components/staff-nav') %>
-    <%- include('components/greeting') %>
       <table class="table table-striped table-hover ">
         <tr>
           <th>cohort name</th>
@@ -9,6 +6,7 @@
         </tr>
         <tr>
           <td></td>
-          <td><%= student.first_name %></td>
+          <%console.log('from student-search ejs',students)%>;
+          <td><%= students.first_name %></td>
         </tr>
       </table>
