--- a/orion/views/components/todo-list.ejs
+++ b/orion/views/components/todo-list.ejs
@@ -1,4 +1,4 @@
-<a href="/todos/add">Add To Do</a>
+<a href="/staff/<%=cookies.id%>/todos/add">Add To Do</a>
 <table class="table table-striped table-hover ">
 
 <thead>
@@ -15,7 +15,9 @@
 <tr>
   <td><%= name %></td>
   <td><%= description %></td>
-  <td><a href="/todos/edit/<%= id %>">Edit</a> <a href="/todos/delete/<%= id %>">Delete</a></td>
+  <td>
+  <a href="/staff/<%=cookies.id%>/todos/assign/<%= id %>"><button style="display: inline-block">Assign</button></a>
+  <a href="/staff/<%=cookies.id%>/todos/edit/<%= id %>"><button style="display: inline-block">Edit</button></a> <form action="/todos/delete/<%= id %>" method="post" style="display: inline-block"><button>Delete</button></form></td>
 </tr>
 <% } %>
 </tbody>
