--- a/orion/views/student-layout.ejs
+++ b/orion/views/student-layout.ejs
@@ -13,7 +13,7 @@
   </head>
 <body>
 
-<%- include('components/header') %>
+<%- include('components/header-student') %>
 <%- include('components/student-nav') %>
 
 <%- include('components/greeting-student') %>
