--- a/orion/views/components/greeting-student.ejs
+++ b/orion/views/components/greeting-student.ejs
@@ -1,3 +1,3 @@
-<% var {student_name} = students[0]%>
+<% var {first_name, last_name} = student[0]%>
 
-<h2>Hello, <%=student_name%> </h2>
+<h2>Hello, <%=first_name%> <%=last_name%></h2>
